--- a/MobileShop.Mobile/MobileShop.Mobile/Views/ArtikliPage.xaml
+++ b/MobileShop.Mobile/MobileShop.Mobile/Views/ArtikliPage.xaml
@@ -4,33 +4,43 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:viewModels1="clr-namespace:MobileShop.Mobile.ViewModels"
+             xmlns:converters="clr-namespace:MobileShop.Mobile.Converters"
              mc:Ignorable="d"
              x:Class="MobileShop.Mobile.Views.ArtikliPage">
     <ContentPage.BindingContext>
         <viewModels1:ArtikliViewModel/>
     </ContentPage.BindingContext>
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <converters:ImageConverter x:Key="imgConv"></converters:ImageConverter>
+        </ResourceDictionary>
+    </ContentPage.Resources>
     <ContentPage.Content>
         <StackLayout>
             <Label Text="Artikli"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
-            <Label Text="Sifra artikla: "></Label>
-            <Entry x:Name="Sifra" ></Entry>
-            <ListView ItemsSource="{Binding ArtikliList}">
+            <Picker ItemsSource="{Binding ProizvodjaciList}" SelectedItem="{Binding SelectedProizvodjac}" ItemDisplayBinding="{Binding Naziv}"></Picker>
+            <ListView ItemsSource="{Binding ArtikliList}" ItemSelected="ListView_ItemSelected">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
-                            <StackLayout Padding="10">
-                                <Label Text="{Binding Naziv}" 
+                            <StackLayout Padding="10" Orientation="Horizontal">
+                                <StackLayout>
+                                    <Image Source="{Binding SlikaThumb,Converter={StaticResource imgConv}}"></Image>
+                                </StackLayout>
+                                <StackLayout Orientation="Vertical">
+                                    <Label Text="{Binding Naziv}" 
                                 d:Text="{Binding .}"
                                 LineBreakMode="NoWrap" 
                                 Style="{DynamicResource ListItemTextStyle}" 
                                 FontSize="16" />
-                                <Label Text="{Binding Sifra}" 
+                                    <Label Text="{Binding Sifra}" 
                                 d:Text="Item descripton"
                                 LineBreakMode="NoWrap"
                                 Style="{DynamicResource ListItemDetailTextStyle}"
                                 FontSize="13" />
+                                </StackLayout>
                             </StackLayout>
                         </ViewCell>
                     </DataTemplate>
