--- a/MobileShop.Mobile/MobileShop.Mobile/Views/NarudzbaPage.xaml
+++ b/MobileShop.Mobile/MobileShop.Mobile/Views/NarudzbaPage.xaml
@@ -45,8 +45,8 @@
                 </ListView.ItemTemplate>
             </ListView>
             <StackLayout Orientation="Vertical" Padding="10" Margin="0">
-                <Label Text="{Binding BrojArtikala,StringFormat='Broj artikala: {0}'}" FontSize="26" FontAttributes="Italic"></Label>
-                <Label Text="{Binding Iznos,StringFormat='Iznos: {0} KM'}" FontSize="26" FontAttributes="Italic"></Label>
+                <Label x:Name="lblBrojArtikala" Text="{Binding BrojArtikala,StringFormat='Broj artikala: {0}'}" FontSize="26" FontAttributes="Italic"></Label>
+                <Label x:Name="lblIznos" Text="{Binding Iznos,StringFormat='Iznos: {0} KM'}" FontSize="26" FontAttributes="Italic"></Label>
                 <Button x:Name="Zakljuci" Text="Zakljuci narudzbu" Clicked="Zakljuci_Clicked" ></Button>
                 <Button x:Name="Otkazi" Text="Otkazi narudzbu" Clicked="Otkazi_Clicked" ></Button>
             </StackLayout>
