--- a/MobileShop.Mobile/MobileShop.Mobile/Views/LoginPage.xaml
+++ b/MobileShop.Mobile/MobileShop.Mobile/Views/LoginPage.xaml
@@ -11,12 +11,22 @@
         <viewModels1:LoginViewModel/>
     </ContentPage.BindingContext>
     <ContentPage.Content>
+        
         <StackLayout VerticalOptions="CenterAndExpand" Padding="10">
+            <Label VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" Text="Prijava @ MobileShop"
+               FontAttributes="Bold" FontSize="28"></Label>
+            
             <Label Text="Korisnicko ime"></Label>
             <Entry  x:Name="KorisnickoIme" Text="{Binding Username}"></Entry>
             <Label Text="Password"></Label>
-            <Entry Text="{Binding Password}"></Entry>
-            <Button Command="{Binding LoginCommand}" HorizontalOptions="FillAndExpand" Text="Login"></Button>
+            <Entry Text="{Binding Password}" IsPassword="True"></Entry>
+            <StackLayout Orientation="Horizontal" HorizontalOptions="End">
+                
+                <Button Text="Registracija" Clicked="Button_Clicked"></Button>
+                <Button Command="{Binding LoginCommand}" Text="Login"></Button>
+                
+            </StackLayout>
+         
             <Label IsVisible="{Binding IsBusy}" Text="Working..."></Label>
         </StackLayout>
     </ContentPage.Content>
