--- a/MobileShop.Mobile/MobileShop.Mobile/Views/UporediDvaArtiklaPage.xaml
+++ b/MobileShop.Mobile/MobileShop.Mobile/Views/UporediDvaArtiklaPage.xaml
@@ -13,26 +13,38 @@
 	</ContentPage.Resources>
 	<ContentPage.Content>
 		<StackLayout>
-			<Label Text="Uporedi dva artikla" />
 			<Grid  Padding="10" Margin="10" >
 				<Grid.RowDefinitions>
-					<RowDefinition Height="200" ></RowDefinition>
+					<RowDefinition Height="300" ></RowDefinition>
+					<RowDefinition Height="Auto"></RowDefinition>
 					<RowDefinition Height="Auto"></RowDefinition>
 
 				</Grid.RowDefinitions>
 				<Grid.ColumnDefinitions>
-					<ColumnDefinition Width="Auto" ></ColumnDefinition>
-					<ColumnDefinition Width="Auto"></ColumnDefinition>
+					<ColumnDefinition Width="*" ></ColumnDefinition>
+					<ColumnDefinition Width="*"></ColumnDefinition>
 				</Grid.ColumnDefinitions>
 
 				<StackLayout Grid.Row="0" Grid.Column="0" Grid.RowSpan="1"  >
-					<Image Margin="0, 30, 0, 0" HorizontalOptions="Start" Source="{Binding Artikal1.Slika,Converter={StaticResource imgConv}}" ></Image>
+					<Image Margin="0, 20, 25, 0" HorizontalOptions="Center" Source="{Binding Artikal1.SlikaThumb,Converter={StaticResource imgConv}}" ></Image>
+					<Label FontSize="20" HorizontalOptions="Center" Text="{Binding Artikal1.Naziv}"  ></Label>
+					<Label FontSize="20" HorizontalOptions="Center" Text="{Binding Artikal1.Cijena, StringFormat='Cijena: {0} KM' }"  ></Label>
 				</StackLayout>
 
 				<StackLayout Grid.Row="0" Grid.Column="1" Grid.RowSpan="1"  >
-					<Image Margin="0, 30, 0, 0" HorizontalOptions="End" Source="{Binding Artikal2.Slika,Converter={StaticResource imgConv}}" ></Image>
+					<Image Margin="25, 20, 0, 0" HorizontalOptions="Center" Source="{Binding Artikal2.SlikaThumb,Converter={StaticResource imgConv}}" ></Image>
+					<Label FontSize="20" HorizontalOptions="Center" Text="{Binding Artikal2.Naziv}"  ></Label>
+					<Label FontSize="20" HorizontalOptions="Center" Text="{Binding Artikal2.Cijena, StringFormat='Cijena: {0} KM' }"  ></Label>
 				</StackLayout>
-				<StackLayout Grid.Row="1" Grid.Column="0" Grid.RowSpan="2"  >
+				<StackLayout Grid.Row="1" Grid.Column="0" Grid.RowSpan="1"  >
+					<Label IsVisible="{Binding NovoPrvi_IsVisible}" HorizontalOptions="CenterAndExpand" BackgroundColor="Green" TextColor="Wheat" >NOVO</Label>
+					<Label IsVisible="{Binding PolovnoPrvi_IsVisible}" HorizontalOptions="CenterAndExpand" BackgroundColor="Gray">Polovno</Label>
+				</StackLayout>
+				<StackLayout Grid.Row="1" Grid.Column="1" Grid.RowSpan="1"  >
+					<Label IsVisible="{Binding NovoDrugi_IsVisible}" HorizontalOptions="CenterAndExpand" BackgroundColor="Green" TextColor="Wheat" >NOVO</Label>
+					<Label IsVisible="{Binding PolovnoDrugi_IsVisible}" HorizontalOptions="CenterAndExpand" BackgroundColor="Gray">Polovno</Label>
+				</StackLayout>
+				<StackLayout Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"  >
 					<Grid  Padding="10" Margin="5,20,0,0" RowSpacing="20"  >
 						<Grid.RowDefinitions >
 							<RowDefinition Height="*" ></RowDefinition>
