--- a/MobileShop.Mobile/MobileShop.Mobile/Views/ArtikliDetailPage.xaml
+++ b/MobileShop.Mobile/MobileShop.Mobile/Views/ArtikliDetailPage.xaml
@@ -19,9 +19,11 @@
 				<RowDefinition Height="300" ></RowDefinition>
 				<RowDefinition Height="Auto"></RowDefinition>
 				<RowDefinition Height="Auto"></RowDefinition>
-				<RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
 
-			</Grid.RowDefinitions>
+                </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="200" ></ColumnDefinition>
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
@@ -131,8 +133,59 @@
 					ItemDisplayBinding="{Binding Naziv}">
 			</Picker>
 				<Button Command="{Binding UporediDvaArtiklaCommand}" BackgroundColor="LightGreen" Text="Uporedi"></Button>
-			</StackLayout>
+                    <BoxView HorizontalOptions="FillAndExpand" HeightRequest="5" Color="Gray"></BoxView>
+                </StackLayout>
 
+                    <RelativeLayout Grid.Row="5" Grid.ColumnSpan="2" VerticalOptions="EndAndExpand" HeightRequest="170" Margin="10" >
+                    <Label HorizontalOptions="Start" VerticalOptions="EndAndExpand">Preporuceni artikli:</Label>
+                        <ListView
+                            ItemsSource="{Binding RecommenderList}"
+                  ItemSelected="preporuceniProizvodiList_ItemSelected"
+                  x:Name="preporuceniProizvodiList"
+                    VerticalScrollBarVisibility="Default"
+                HasUnevenRows="True"
+                SeparatorVisibility="None"
+                    Margin="0,33,0,0"
+                Rotation="270"
+                RowHeight="150"
+RelativeLayout.XConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width, Factor=0.5, Constant=-70}"
+RelativeLayout.YConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width, Factor=-0.5, Constant=70}"
+RelativeLayout.WidthConstraint="{ConstraintExpression Type=Constant, Constant=140}"
+RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width, Factor=1}">
+                            <ListView.ItemTemplate>
+                                <DataTemplate >
+                                    <ViewCell  IsEnabled="False">
+                                        <ContentView Rotation="90">
+                                            <Grid HorizontalOptions="StartAndExpand">
+                                                <Grid.RowDefinitions>
+                                                    <RowDefinition></RowDefinition>
+                                                    <RowDefinition></RowDefinition>
+                                                </Grid.RowDefinitions>
+                                                <Grid Grid.Row="0">
+                                                    <Image x:Name="proizvodImagerec" Margin="0,10,0,0"  HorizontalOptions="Center" Source="{Binding SlikaThumb, Converter={StaticResource imgConv}}"></Image>
+                                                </Grid>
+                                                <StackLayout Grid.Row="1" 
+                                                 VerticalOptions="FillAndExpand" Padding="5,0,5,0" HorizontalOptions="Center">
+                                                    <Grid>
+                                                        <Label  HorizontalOptions="Center" Text="{Binding Naziv}" ></Label>
+                                                    </Grid>
+                                                    <Grid>
+                                                        <Label  HorizontalOptions="Center" Text="{Binding Cijena}" Style="{DynamicResource ListItemTextStyle}" ></Label>
+                                                        <Label>KM</Label>
+                                                    </Grid>
+                                                    <Grid>
+                                                    <Label  HorizontalOptions="Center" Text="{Binding ProsjecnaOcjena, StringFormat=' {0:F2} '}" ></Label>
+                                                        <Label>Rating:</Label>
+                                                    </Grid>
+                                                </StackLayout>
+                                            </Grid>
+                                        </ContentView>
+                                    </ViewCell>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </ListView>
+                    </RelativeLayout>
+          
 
 
 		</Grid>
