--- a/MobileShop.Mobile/MobileShop.Mobile/Views/ZahtjeviPage.xaml
+++ b/MobileShop.Mobile/MobileShop.Mobile/Views/ZahtjeviPage.xaml
@@ -18,7 +18,7 @@
                 <Label Text="Naslov: "></Label>
                 <Entry  x:Name="Naslov" Text="{Binding Naslov}"></Entry>
                 <Label Text="Opis: "></Label>
-                <Entry Text="{Binding Opis}"></Entry>
+                <Entry x:Name="Opis" Text="{Binding Opis}"></Entry>
                 <Button Command="{Binding PosaljiCommand}" HorizontalOptions="FillAndExpand" Text="Posalji"
                         Clicked="Button_Clicked"></Button>
             
