--- a/MobileShop.Mobile/MobileShop.Mobile/Views/HistorijaNarudzbiDetailPage.xaml
+++ b/MobileShop.Mobile/MobileShop.Mobile/Views/HistorijaNarudzbiDetailPage.xaml
@@ -66,7 +66,7 @@
 
                 <BoxView HorizontalOptions="FillAndExpand" HeightRequest="5" Color="Gray"></BoxView>
             </StackLayout>
-            <Label Text="Stavke narudzbe"
+            <Label Text="Stavke narudzbe: "
                 HorizontalTextAlignment="Start" FontAttributes="Bold"
                        FontSize="22" />
             
